fixed the jump on hover

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -97,6 +97,8 @@ ul {
 	 top: 50%;
 	 left: 50%;
 	 display: #000;
+   will-change: transform;
+
 }
 /*
  .tile__details:after {
